# incoming-invoice-automation

./: .cfignore  .env.example  .gitignore  Procfile  README.md  manifest.yml  mta.yaml  pyproject.toml  requirements.txt
config/: sap_mapping.example.json
docs/: ABAP_TS_QUALITY_GATE.md  CUSTOMER_QUESTIONNAIRE.md  LINKEDIN_ARTICLE_EN.md  LINKEDIN_ARTICLE_TR.md  LINKEDIN_SHARE_POST_EN.md
invoice_automation/: __init__.py  activity_log.py  cli.py  config.py  graph_client.py  mail_worker.py  mapping.py  models.py  pdf_parser.py  qr.py  runtime_settings.py  sap_client.py  utils.py  web.py
scripts/: build-ui.ps1  create-graph-subscription.ps1  deploy-cf.ps1  invoke-mail-job.ps1  set-cf-env.ps1
tests/: test_graph_client.py  test_mail_worker.py  test_private_pdf_parser.py  test_web.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.jsx  styles.css
